--- a/sobremi.html
+++ b/sobremi.html
@@ -11,6 +11,7 @@
       <li>Alejandro Rabadan Rivas</li>
       <li>a19rarial@iesgrancapitan.org</li>
       <li>futbol y series</li>
+      <li><img src="patios.jpg" alt="patios"></li>
     </ul>  
 </body>
 </html>
